# PatternDesign-In-C

./: README.md
myLibraries/MCAL_Layer/: CMakeLists.txt  README.md
myLibraries/MCAL_Layer/ADC/Dynamic/src/: ADC_Lcfg.c
myLibraries/MCAL_Layer/ADC/Static/inc/: ADC.h  ADC_Types.h
myLibraries/MCAL_Layer/ADC/Static/src/: ADC.c
myLibraries/MCAL_Layer/DIO/: README.md
myLibraries/MCAL_Layer/DIO/Dynamic/src/: DIO_Lcfg.c
myLibraries/MCAL_Layer/DIO/Static/inc/: DIO.h  DIO_Types.h
myLibraries/MCAL_Layer/DIO/Static/src/: DIO.c
myLibraries/MCAL_Layer/GPT/: README.md
myLibraries/MCAL_Layer/GPT/Dynamic/inc/: GPT_Cfg.h
myLibraries/MCAL_Layer/GPT/Static/inc/: GPT.h  GPT_Types.h
myLibraries/MCAL_Layer/GPT/Static/src/: GPT.c
myLibraries/MCAL_Layer/I2C/: README.md
myLibraries/MCAL_Layer/I2C/Dynamic/inc/: I2C_Cfg.h
myLibraries/MCAL_Layer/I2C/Static/Src/: I2C.c
myLibraries/MCAL_Layer/I2C/Static/inc/: I2C.h  I2C_Types.h
myLibraries/MCAL_Layer/IntCtrl/Dynamic/inc/: IntCtrl_Cfg.h
myLibraries/MCAL_Layer/IntCtrl/Dynamic/src/: IntCtrl_Lcfg.c
myLibraries/MCAL_Layer/IntCtrl/Static/inc/: IntCtrl.h  IntCtrl_Types.h
myLibraries/MCAL_Layer/IntCtrl/Static/src/: IntCtrl.c
myLibraries/MCAL_Layer/PLL/Dynamic/src/: PLL_Lcfg.c
myLibraries/MCAL_Layer/PLL/Static/inc/: PLL_Types.h
myLibraries/MCAL_Layer/PLL/Static/src/: PLL.c
myLibraries/MCAL_Layer/PORT/: CMakeLists.txt  README.md
myLibraries/MCAL_Layer/PORT/Dynamic/src/: PORT_Lcfg.c
myLibraries/MCAL_Layer/PWM/: README.md
myLibraries/MCAL_Layer/UART/: README.md
myLibraries/MCAL_Layer/WDT/: README.md
(+1469 files in other folders)
